--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -155,219 +155,219 @@
   \hspace{1cm}
   \begin{figure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_3_1.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$3_1$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_4_1.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$4_1$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_5_1.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$5_1$}
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_5_2.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$5_2$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_5_3.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$5_3$}
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_5_4.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$5_4$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_5_5.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$5_5$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_5_6.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$5_6$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_5_7.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$5_7$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_1.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_1$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_2.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_2$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_3.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_3$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_4.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_4$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_5.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_5$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_6.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_6$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_7.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_7$} 
     \end{subfigure}
       \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_8.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_8$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_9.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_9$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_10.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_{10}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_11.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_{11}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_12.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_{12}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_13.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_{13}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_14.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_{14}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_15.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_{15}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_6_16.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$6_{16}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_1.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{1}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_2.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{2}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_3.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{3}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_4.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{4}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_5.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{5}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_6.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{6}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_7.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{7}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_8.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{8}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_9.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{9}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_10.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{10}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_11.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{11}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_12.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{12}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_13.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{13}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_14.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{14}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_15.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{15}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_16.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{16}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_17.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{17}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_18.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{18}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_19.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{19}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_20.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{20}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_21.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{21}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_22.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{22}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_23.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{23}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_24.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{24}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_25.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{25}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_26.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{26}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_27.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{27}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_28.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{28}$} 
     \end{subfigure}
     \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=\columnwidth]{C:/Users/io25j/Pictures/backup/documents/GitHub/R-E/Midterm_Poster/grid_diagram/theta_7_29.png}
+    \includegraphics[width=\columnwidth]{../Midterm_Poster/grid_diagram/theta_7_29.png}
     \caption{$7_{29}$} 
     \end{subfigure}
 
