--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -118,11 +118,10 @@
       \item \textbf{Handcuff graph} consists of two loops and an edge joining the loops.
       \item The \textbf{grid diagram} is made of horizontal lines and vertical lines, and vertical lines are always on top of horizontal lines.
       Except the vertices, two points that are bent vertically should be on each horizontal and vertical lines.
-      The \textbf{Cromwell matrix} of theta-curve and handcuff graphs is the matrix made of 0 and 1.
+      \item The \textbf{Cromwell matrix} of theta-curve and handcuff graphs is the matrix made of 0 and 1.
       Except 2 rows, each row and columns has exactly two 1s, and for 2 rows, there are exactly three 1s.
       If the 1s are connected by horizontal and vertical lines, it leads to the grid diagram.
-      The arc presentation can be expressed by grid diagram and vice versa.
-      They are in one-to-one correspondence.
+      \item The arc presentation can be expressed by grid diagram and vice versa.
       Also, if the number of half planes are $\alpha$ on minimal arc presentation, the size of corresponding grid diagram is $(\alpha - 1) \times \alpha$.\\
 
     \end{itemize}
