--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -139,7 +139,7 @@
     The given THC-Cromwell matrix is handcuff graph if and only if determinant of the H-deletion matrix is $0$ or $\pm 2$.\\
   \end{block}
   \column{0.33\textwidth}
-  \begin{block}{새로운 거}
+  \begin{block}{새로운 거(민호씨 알고리즘 넣으쇼)}
 
     This block catches your eye, so \textbf{important stuff} should probably go
     here.
