--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -49,9 +49,9 @@
 
 \title{Classifying Theta-Curves and Handcuff Graphs up to 7 Crossing by Arc Index(가제)}
 
-\author{Cho Eunchan \inst{1} \and Jeongwon Shin \inst{1} \and Boyeon Seo \inst{1} \and Minho Choi \inst{1} \and Kim Hun \inst{2} \and 진교택 \inst{3} \and 이재원 \inst{4}}
+\author{Cho Eunchan \inst{1} \and Jeongwon Shin \inst{1} \and Boyeon Seo \inst{1} \and Minho Choi \inst{1} \and Kim Hun \inst{2} \and 진교택 \inst{3}}
 
-\institute[shortinst]{\inst{1} Researcher, Korea Science Academy of KAIST \samelineand \inst{2} Supervisor, Another Institute \samelineand \inst{3} Co-Supervisor, asdf \samelineand \inst{4} Assistant, asdf \samelineand}
+\institute[shortinst]{\inst{1} Researcher, Korea Science Academy of KAIST \samelineand \inst{2} Supervisor, Another Institute \samelineand \inst{3} Co-Supervisor, asdf \samelineand}
 
 % ====================
 % Footer (optional)
