--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -50,9 +50,9 @@
 
 \title{Classifying Theta-Curves and Handcuff Graphs up to 7 Crossing by Arc Index(가제)}
 
-\author{Cho Eunchan \inst{1} \and Jeongwon Shin \inst{1} \and Boyeon Seo \inst{1} \and Minho Choi \inst{1} \and Kim Hun \inst{2} \and 진교택 \inst{3}}
+\author{Cho Eunchan \inst{1} \and Jeongwon Shin \inst{1} \and Boyeon Seo \inst{1} \and Minho Choi \inst{1} \and Hun Kim \inst{2} \and Gyo-Taek Jin \inst{3}}
 
-\institute[shortinst]{\inst{1} Researcher, Korea Science Academy of KAIST \samelineand \inst{2} Supervisor, Another Institute \samelineand \inst{3} Co-Supervisor, asdf \samelineand}
+\institute[shortinst]{\inst{1} Researcher, Korea Science Academy of KAIST \samelineand \inst{2} Supervisor, Korea Science Academy of KAIST \samelineand \inst{3} Co-Supervisor, asdf \samelineand}
 
 % ====================
 % Footer (optional)
@@ -153,7 +153,7 @@
         \While{$N \neq 0$}
         \If{$N$ is even}
             \State $X \gets X \times X$
-            \State $N \gets \frac{N}{2}$  \Comment{This is a comment}
+            \State $N \gets \frac{N}{2}$
         \ElsIf{$N$ is odd}
             \State $y \gets y \times X$
             \State $N \gets N - 1$
