--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -50,7 +50,7 @@
 
 \title{Classifying Theta-Curves and Handcuff Graphs up to 7 Crossing by Arc Index(가제)}
 
-\author{Cho Eunchan \inst{1} \and Jeongwon Shin \inst{1} \and Boyeon Seo \inst{1} \and Minho Choi \inst{1} \and Hun Kim \inst{2} \and Gyo-Taek Jin \inst{3}}
+\author{Eunchan Cho \inst{1} \and Jeongwon Shin \inst{1} \and Boyeon Seo \inst{1} \and Minho Choi \inst{1} \and Hun Kim \inst{2} \and Gyo-Taek Jin \inst{3}}
 
 \institute[shortinst]{\inst{1} Researcher, Korea Science Academy of KAIST \samelineand \inst{2} Supervisor, Korea Science Academy of KAIST \samelineand \inst{3} Co-Supervisor, asdf \samelineand}
 
