--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -111,21 +111,33 @@
 \begin{columns}[t]
   \column{0.33\textwidth}
   \begin{block}{Definitions}
-    \begin{itemize}
-      \item \textbf{Theta-curve} is a spatial knot on 3-sphere which has 2 vertices and 3 edges.
+    \textbf{Knot} is an embedding of a circle in 3-dimensional Euclidean space. \\
+    In \textbf{Knot Theory}, people classify each knot using their \textbf{Knot Invariant}. \\
+    \textbf{Theta-curve} is a spatial knot on 3-sphere which has 2 vertices and 3 edges.
       In the projection of the theta-curve, the section where theta-curve meets itself is named \textbf{crossing}.
       If the one theta-curve and other theta-curve's continuous transform of the graph is same, these curves are \textbf{equivalent}.
       To transform a projection of theta-curve, the \textbf{generalized Reidemeister move} is used.
-      \item \textbf{Handcuff graph} consists of two loops and an edge joining the loops.
-      \item The \textbf{grid diagram} is made of horizontal lines and vertical lines, and vertical lines are always on top of horizontal lines.
+    \textbf{Handcuff graph} consists of two loops and an edge joining the loops.
+    \begin{figure}
+      \includegraphics[width = 7.5cm]{figures/reidemeister move.png}
+      \caption{reidemeister moves for theta and hundcuff knots}
+    \end{figure}
+    
+  \end{block}
+    \column{0.33\textwidth}
+  \begin{block}{Diagrams}
+
+    \begin{Diagrams}
+      \caption{An algorithm with caption}\label{alg:cap}
+       The \textbf{grid diagram} is made of horizontal lines and vertical lines, and vertical lines are always on top of horizontal lines.
       Except the vertices, two points that are bent vertically should be on each horizontal and vertical lines.
-      \item The \textbf{Cromwell matrix} of theta-curve and handcuff graphs is the matrix made of 0 and 1.
+    The \textbf{Cromwell matrix} of theta-curve and handcuff graphs is the matrix made of 0 and 1.
       Except 2 rows, each row and columns has exactly two 1s, and for 2 rows, there are exactly three 1s.
       If the 1s are connected by horizontal and vertical lines, it leads to the grid diagram.
-      \item The arc presentation can be expressed by grid diagram and vice versa.
+    The arc presentation can be expressed by grid diagram and vice versa.
       Also, if the number of half planes are $\alpha$ on minimal arc presentation, the size of corresponding grid diagram is $(\alpha - 1) \times \alpha$.\\
+    \end{Diagrams}
 
-    \end{itemize}
   \end{block}
   \column{0.33\textwidth}
   \begin{block}{Classifying Theta-Curves and Handcuff Graphs by Determinant}
@@ -138,30 +150,6 @@
     The \textbf{H-deletion Matrix} of THC-Cromwell matrix is $(n-1)\times(n-1)$ matrix which deleted row $i$ and column $j$, $k$.\\
     $\mathbf{Theorem.}$ The given THC-Cromwell matrix is theta-curve if and only if determinant of the H-deletion matrix is $\pm 1$.
     The given THC-Cromwell matrix is handcuff graph if and only if determinant of the H-deletion matrix is $0$ or $\pm 2$.\\
-  \end{block}
-  \column{0.33\textwidth}
-  \begin{block}{새로운 거}
-
-    \begin{algorithm}
-      \caption{An algorithm with caption}\label{alg:cap}
-      \begin{algorithmic}
-        \Require $n \geq 0$
-        \Ensure $y = x^n$
-        \State $y \gets 1$
-        \State $X \gets x$
-        \State $N \gets n$
-        \While{$N \neq 0$}
-        \If{$N$ is even}
-            \State $X \gets X \times X$
-            \State $N \gets \frac{N}{2}$  \Comment{This is a comment}
-        \ElsIf{$N$ is odd}
-            \State $y \gets y \times X$
-            \State $N \gets N - 1$
-        \EndIf
-        \EndWhile
-      \end{algorithmic}
-    \end{algorithm}
-
   \end{block}
 \end{columns}
 
