--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -119,7 +119,7 @@
       To transform a projection of theta-curve, the \textbf{generalized Reidemeister move} is used.
     \textbf{Handcuff graph} consists of two loops and an edge joining the loops.
     \begin{figure}
-      \includegraphics[width = 7.5cm]{figures/reidemeister move.png}
+      \includegraphics[width = 7.5cm]{figure/reidemeister move.png}
       \caption{reidemeister moves for theta and hundcuff knots}
     \end{figure}
     
