--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -111,13 +111,15 @@
 \begin{columns}[t]
   \column{0.33\textwidth}
   \begin{block}{Definitions}
-    \textbf{Knot} is an embedding of a circle in 3-dimensional Euclidean space. \\
+    \textbf{Knot} is an embedding of a circle in 3-dimensional Euclidean space.
     In \textbf{Knot Theory}, people classify each knot using their \textbf{Knot Invariant}. \\
-    \textbf{Theta-curve} is a spatial knot on 3-sphere which has 2 vertices and 3 edges.
+    \begin{itemize}
+      \item \textbf{Theta-curve} is a spatial knot on 3-sphere which has 2 vertices and 3 edges.
       In the projection of the theta-curve, the section where theta-curve meets itself is named \textbf{crossing}.
       If the one theta-curve and other theta-curve's continuous transform of the graph is same, these curves are \textbf{equivalent}.
       To transform a projection of theta-curve, the \textbf{generalized Reidemeister move} is used.
-    \textbf{Handcuff graph} consists of two loops and an edge joining the loops.
+      \item \textbf{Handcuff graph} consists of two loops and an edge joining the loops.
+    \end{itemize}
     \begin{figure}
       \includegraphics[width = 7.5cm]{figure/reidemeister move.png}
       \caption{reidemeister moves for theta and hundcuff knots}
@@ -129,12 +131,14 @@
 
     \begin{Diagrams}
       \caption{An algorithm with caption}\label{alg:cap}
-       The \textbf{grid diagram} is made of horizontal lines and vertical lines, and vertical lines are always on top of horizontal lines.
-    The \textbf{Cromwell matrix} of theta-curve and handcuff graphs is the matrix made of 0 and 1.
-      Except 2 rows, each row and columns has exactly two 1s, and for 2 rows, there are exactly three 1s.
-      If the 1s are connected by horizontal and vertical lines, it leads to the grid diagram.
-    The arc presentation can be expressed by grid diagram and vice versa.
-      Also, if the number of half planes are $\alpha$ on minimal arc presentation, the size of corresponding grid diagram is $(\alpha - 1) \times \alpha$.\\
+      \begin{itemize} 
+        \item The \textbf{grid diagram} is made of horizontal lines and vertical lines, and vertical lines are always on top of horizontal lines.
+        \item The \textbf{Cromwell matrix} of theta-curve and handcuff graphs is the matrix made of 0 and 1.
+        Except 2 rows, each row and columns has exactly two 1s, and for 2 rows, there are exactly three 1s.
+        If the 1s are connected by horizontal and vertical lines, it leads to the grid diagram.
+        \item The \textbf{arc presentation} can be expressed by grid diagram and vice versa.
+        Also, if the number of half planes are $\alpha$ on minimal arc presentation, the size of corresponding grid diagram is $(\alpha - 1) \times \alpha$.\\
+      \end{itemize} 
     \end{Diagrams}
 
   \end{block}
