--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -750,17 +750,8 @@
     새로운 거
   \end{block}
   \column{0.33\textwidth}
-  \begin{block}{새로운 거}
-
-    This block catches your eye, so \textbf{important stuff} should probably go
-    here.
-
-    Curabitur eu libero vehicula, cursus est fringilla, luctus est. Morbi
-    consectetur mauris quam, at finibus elit auctor ac. Aliquam erat volutpat.
-    Aenean at nisl ut ex ullamcorper eleifend et eu augue. Aenean quis velit
-    tristique odio convallis ultrices a ac odio.
-
-    \begin{itemize}
+  \begin{block}{Refernces}
+    \begin{enumerate}
       \item \textbf{Fusce dapibus tellus} vel tellus semper finibus. In
         consequat, nibh sed mattis luctus, augue diam fermentum lectus.
       \item \textbf{In euismod erat metus} non ex. Vestibulum luctus augue in
@@ -768,11 +759,7 @@
       \item \textbf{Suspendisse vulputate} mauris vel placerat consectetur.
         Mauris semper, purus ac hendrerit molestie, elit mi dignissim odio, in
         suscipit felis sapien vel ex.
-    \end{itemize}
-
-    Aenean tincidunt risus eros, at gravida lorem sagittis vel. Vestibulum ante
-    ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
-
+    \end{enumerate}
   \end{block}
 \end{columns}
 
