--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -732,22 +732,28 @@
 \begin{columns}[t]
   \column{0.33\textwidth}
   \begin{block}{Bounds of Arc Index}
-    \begin{itemize}
-      \item \textbf{Theta-curve} is a spatial knot on 3-sphere which has 2 vertices and 3 edges.
-      In the projection of the theta-curve, the section where theta-curve meets itself is named \textbf{crossing}.
-      If the one theta-curve and other theta-curve's continuous transform of the graph is same, these curves are \textbf{equivalent}.
-      To transform a projection of theta-curve, the \textbf{generalized Reidemeister move} is used.
-      \item \textbf{Handcuff graph} consists of two loops and an edge joining the loops.
-      \item The \textbf{grid diagram} is made of horizontal lines and vertical lines, and vertical lines are always on top of horizontal lines.
-      Except the vertices, two points that are bent vertically should be on each horizontal and vertical lines.
-      The \textbf{Cromwell matrix} of theta-curve and handcuff graphs is the matrix made of 0 and 1.
-      Except 2 rows, each row and columns has exactly two 1s, and for 2 rows, there are exactly three 1s.
-      If the 1s are connected by horizontal and vertical lines, it leads to the grid diagram.
-      The arc presentation can be expressed by grid diagram and vice versa.
-      They are in one-to-one correspondence.
-      Also, if the number of half planes are $\alpha$ on minimal arc presentation, the size of corresponding grid diagram is $(\alpha - 1) \times \alpha$.\\
+  \textbf{Stacked tangle} of an theta-curve is stacked disks each with the frame as boundary with following properties:
+  \begin{itemize}
+  \item Only two disk called \textbf{non-simple disks} contain one vertex and three line
+  segments which joins the vertex and boundary point.
+  \item One of the non-simple disks is at the top.
+  \item Other disks called \textbf{simple disks} contain simple arc which joins two
+  points on the boundary.
+  \item When view from above
+  \begin{itemize}
+      \item two arcs in different simple disks intersect at most one point (by RII)
+      \item arc in simple disk and tree in non-simple disk intersect at most one point (by RV)
+  \end{itemize}
+  \end{itemize}
 
-    \end{itemize}
+  \textbf{Simple closure} of stacked tangle is a stacked tangle with \textbf{caps} satisfying following properties:
+  \begin{itemize}
+      \item A \textbf{cap} is a simple arc in outside of stacked tangle joining end points of arcs or line segments
+      \item When view from above any tow caps have no intersection.
+  \end{itemize}
+  % Then a simple closure of a stacked tangle without any nested caps is
+  % corresponding to an arc presentation.
+
   \end{block}
   \column{0.33\textwidth}
   \begin{block}{새로운 거}
