폴리폴리 나포리탄 괴담

--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -756,13 +756,10 @@
   \column{0.33\textwidth}
   \begin{block}{Refernces}
     \begin{enumerate}
-      \item \textbf{Fusce dapibus tellus} vel tellus semper finibus. In
-        consequat, nibh sed mattis luctus, augue diam fermentum lectus.
-      \item \textbf{In euismod erat metus} non ex. Vestibulum luctus augue in
-        mi condimentum, at sollicitudin lorem viverra.
-      \item \textbf{Suspendisse vulputate} mauris vel placerat consectetur.
-        Mauris semper, purus ac hendrerit molestie, elit mi dignissim odio, in
-        suscipit felis sapien vel ex.
+      \item Yoonsang Lee. (year). \textit{A Study on Arc Index of Theta-Curves}. Korea Science Academy of KAIST
+      \item H. Moriuchi. (2009). \textit{A table of 0-curves and handcuff graphs with up to seven crossings}. Advanced Studies in Pure Mathematics 55, 2009 Noncommutativity and Singularities
+pp. 281-290
+      \item MINJUNG LEE & SUNGJONG NO & AND SEUNGSANG OH. (2017). \textit{ARC INDEX OF SPATIAL GRAPHS}. arXiv:1711.08116v1 [math.GT] 22 Nov 2017
     \end{enumerate}
   \end{block}
 \end{columns}
