--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -48,11 +48,11 @@
 % Title
 % ====================
 
-\title{Classifying Theta-Curves and Handcuff Graphs up to 7 Crossing by Arc Index(가제)}
+\title{Arc Index of Theta-Curves and Handcuff Graphs}
 
-\author{Cho Eunchan \inst{1} \and Jeongwon Shin \inst{1} \and Boyeon Seo \inst{1} \and Minho Choi \inst{1} \and Kim Hun \inst{2} \and 진교택 \inst{3}}
+\author{Cho, Eunchan \inst{1} \and  Shin, Jeongwon \inst{1} \and  Seo, Boyeon \inst{1} \and  Choi, Minho \inst{1} \and Kim, Hun \inst{2} \and Jin, Gyo Taek \inst{3}}
 
-\institute[shortinst]{\inst{1} Researcher, Korea Science Academy of KAIST \samelineand \inst{2} Supervisor, Another Institute \samelineand \inst{3} Co-Supervisor, asdf \samelineand}
+\institute[shortinst]{\inst{1} Korea Science Academy of KAIST \samelineand \inst{2} Supervisor, Korea Science Academy of KAIST \samelineand \inst{3} Supervisor, asdf \samelineand}
 
 % ====================
 % Footer (optional)
@@ -121,7 +121,7 @@
       \item \textbf{Handcuff graph} consists of two loops and an edge joining the loops.
     \end{itemize}
     \begin{figure}
-      \includegraphics[width = 7.5cm]{figure/reidemeister move.png}
+      \includegraphics[width = 7.5cm]{figure/reidemeister.pdf}
       \caption{reidemeister moves for theta and hundcuff knots}
     \end{figure}
     
