--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -48,7 +48,9 @@
 % Title
 % ====================
 
-\title{Arc Index of Theta-Curves and Handcuff Graphs}
+%\title{Arc Indices of Theta-Curves and Handcuff Graphs}
+\title{Minimal Grid Diagrams of \\ Theta-Curves and Handcuff Graphs Up to 7 Crossings}
+
 
 \author{Cho, Eunchan \inst{1} \and  Shin, Jeongwon \inst{1} \and  Seo, Boyeon \inst{1} \and  Choi, Minho \inst{1} \and Kim, Hun \inst{2} \and Jin, Gyo Taek \inst{3}}
 
@@ -111,12 +113,12 @@
 \begin{columns}[t]
   \column{0.33\textwidth}
   \begin{block}{Definitions}
-    \textbf{Knot} is an embedding of a circle in 3-dimensional Euclidean space.
-    In \textbf{Knot Theory}, people classify each knot using their \textbf{Knot Invariant}. \\
+    %\textbf{Knot} is an embedding of a circle in 3-dimensional Euclidean space.
+    %In \textbf{Knot Theory}, people classify each knot using their \textbf{Knot Invariant}. \\
     \begin{itemize}
       \item \textbf{Theta-curve} is a spatial knot on 3-sphere which has 2 vertices and 3 edges.
-      In the projection of the theta-curve, the section where theta-curve meets itself is named \textbf{crossing}.
-      If the one theta-curve and other theta-curve's continuous transform of the graph is same, these curves are \textbf{equivalent}.
+      %In the projection of the theta-curve, the section where theta-curve meets itself is named \textbf{crossing}.
+      %If the one theta-curve and other theta-curve's continuous transform of the graph is same, these curves are \textbf{equivalent}.
       To transform a projection of theta-curve, the \textbf{generalized Reidemeister move} is used.
       \item \textbf{Handcuff graph} consists of two loops and an edge joining the loops.
     \end{itemize}
