--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -117,11 +117,11 @@
     %\textbf{Knot} is an embedding of a circle in 3-dimensional Euclidean space.
     %In \textbf{Knot Theory}, people classify each knot using their \textbf{Knot Invariant}. \\
     \begin{itemize}
-      \item \textbf{Theta-curve} is a spatial knot on 3-sphere which has 2 vertices and 3 edges.
+      \item \textbf{theta-curve} : a spatial knot on 3-sphere which has 2 vertices and 3 edges
       %In the projection of the theta-curve, the section where theta-curve meets itself is named \textbf{crossing}.
       %If the one theta-curve and other theta-curve's continuous transform of the graph is same, these curves are \textbf{equivalent}.
-      To transform a projection of theta-curve, the \textbf{generalized Reidemeister move} is used.
-      \item \textbf{Handcuff graph} consists of two loops and an edge joining the loops.
+      \item \textbf{generalized Reidemeister move} : used to transform a projection of theta-curve
+      \item \textbf{handcuff graph} : consists of two loops and an edge joining the loops
     \end{itemize}
     \begin{figure}
       \includegraphics[width = 7.5cm]{figure/reidemeister.pdf}
@@ -135,12 +135,9 @@
     \begin{Diagrams}
       \caption{An algorithm with caption}\label{alg:cap}
       \begin{itemize} 
-        \item The \textbf{grid diagram} is made of horizontal lines and vertical lines, and vertical lines are always on top of horizontal lines.
-        \item The \textbf{Cromwell matrix} of theta-curve and handcuff graphs is the matrix made of 0 and 1.
-        Except 2 rows, each row and columns has exactly two 1s, and for 2 rows, there are exactly three 1s.
-        If the 1s are connected by horizontal and vertical lines, it leads to the grid diagram.
-        \item The \textbf{arc presentation} can be expressed by grid diagram and vice versa.
-        Also, if the number of half planes are $\alpha$ on minimal arc presentation, the size of corresponding grid diagram is $(\alpha - 1) \times \alpha$.\\
+        \item \textbf{grid diagram} : made of horizontal lines and vertical lines, and vertical lines are always on top of horizontal lines
+        \item \textbf{Cromwell matrix} : matrix made of 0 and 1 - except 2 rows, each row and columns has exactly two 1s, and for 2 rows, there are exactly three 1s, if the 1s are connected by horizontal and vertical lines, it leads to the grid diagram
+        \item \textbf{arc presentation} : can be expressed by grid diagram and vice versa \\ number of half planes are $\alpha$ on minimal arc presentation $\Rightarrow$ the size of corresponding grid diagram is $(\alpha - 1) \times \alpha$.\\
       \end{itemize} 
     \end{Diagrams}
 
