--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -731,7 +731,7 @@
 \begin{columns}[t]
   \column{0.33\textwidth}
   \begin{block}{Bounds of Arc Index}
-  \textbf{Stacked tangle} of an theta-curve is stacked disks each with the frame as boundary with following properties:
+  \textbf{Stacked tangle} is stacked disks each with the frame as boundary with following properties:
   \begin{itemize}
   \item Only two disk called \textbf{non-simple disks} contain one vertex and three line
   segments which joins the vertex and boundary point.
