--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -733,10 +733,10 @@
   \begin{block}{Stacked Tangle Representation}
 
   \begin{itemize}
-    \item \textbf{Stacked tangle} of an theta-curve or handcuff graph is a configuration of stacked disks with arcs and caps.
-    \item \textbf{Arcs} are segments properly embedded in each disk, with endpoints on the boundary.
-    \item \textbf{Caps} are segments from the arc in one disk to the arc in another disk.
-    \item A \textbf{Simple closure} of stacked tangle is the planar projection of the stacked tangle without any nested caps.
+    \item \textbf{stacked tangle} : a configuration of stacked disks with arcs and caps
+    \item \textbf{arcs} : segments properly embedded in each disk, with endpoints on the boundary
+    \item \textbf{caps} : segments from the arc in one disk to the arc in another disk
+    \item \textbf{simple closure}: the planar projection of the stacked tangle without any nested caps
   \end{itemize}
   % Then a simple closure of a stacked tangle without any nested caps is
   % corresponding to an arc presentation.
