--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -65,13 +65,17 @@
   \begin{center}
     \begin{minipage}[c]{\linewidth}
       \centering
-      \quad \includegraphics[height=2cm]{../Midterm_Poster/logos/ksa_logo.jpg} \hfill
-      \centering
-      \includegraphics[height=2cm]{../Midterm_Poster/logos/kaist_logo.png} \hfill
-      \centering
-      \includegraphics[height=2cm]{../Midterm_Poster/logos/gwagibu_logo.jpg} \quad
+      \makebox[0.3\linewidth][r]{%
+        \includegraphics[height=2cm]{../Midterm_Poster/logos/image.png}
+      }%
+      \makebox[0.4\linewidth][c]{%
+        \includegraphics[height=2cm]{../Midterm_Poster/logos/kaist_logo.png}
+      }%
+      \makebox[0.3\linewidth][l]{%
+        \includegraphics[height=2cm]{../Midterm_Poster/logos/gwagibu_logo.jpg}
+      }
     \end{minipage}
-
+    
     \vspace{0.3cm}
 
     Korea Science Academy of KAIST \quad
