--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -55,7 +55,7 @@
 
 \author{Cho, Eunchan \inst{1} \and  Shin, Jeongwon \inst{1} \and  Seo, Boyeon \inst{1} \and  Choi, Minho \inst{1} \and Kim, Hun \inst{2} \and Jin, Gyo Taek \inst{3}}
 
-\institute[shortinst]{\inst{1} Korea Science Academy of KAIST \samelineand \inst{2} Supervisor, Korea Science Academy of KAIST \samelineand \inst{3} Supervisor, asdf \samelineand}
+\institute[shortinst]{\inst{1} Korea Science Academy of KAIST \samelineand \inst{2} Supervisor, Korea Science Academy of KAIST \samelineand \inst{3} Supervisor, Department of Mathematical Sciences, Korea Advanced Institute of Science and Technology \samelineand}
 
 % ====================
 % Footer (optional)
@@ -75,7 +75,7 @@
         \includegraphics[height=2cm]{../Midterm_Poster/logos/gwagibu_logo.jpg}
       }
     \end{minipage}
-    
+
     \vspace{0.3cm}
 
     Korea Science Academy of KAIST \quad
@@ -147,17 +147,23 @@
 
   \end{block}
   \column{0.33\textwidth}
-  \begin{block}{Classifying Theta-Curves and Handcuff Graphs by Determinant}
-    $\mathbf{Definition.}$ The \textbf{THC-Cromwell matrix} is the matrix that satisfies the following conditions.
-    \begin{enumerate}
-      \item It is a $n\times(n+1)$ matrix with entries 0 and 1.
-      \item It has only two 1s in every row and column, except for two rows. These two rows have three 1s.
-      \item It represents a theta-curve or a handcuff graph.
-    \end{enumerate}
-    $\mathbf{Definition.}$ Let any exception row(with three `1's) $i$ and its two outer 1s $j$, $k$.
-    The \textbf{H-deletion Matrix} of THC-Cromwell matrix is $(n-1)\times(n-1)$ matrix which deleted row $i$ and column $j$, $k$.\\
-    $\mathbf{Theorem.}$ The given THC-Cromwell matrix is theta-curve if and only if determinant of the H-deletion matrix is $\pm 1$.
-    The given THC-Cromwell matrix is handcuff graph if and only if determinant of the H-deletion matrix is $0$ or $\pm 2$.\\
+  \begin{block}{Stacked Tangle Representation}
+
+  \begin{itemize}
+    \item \textbf{stacked tangle} : a configuration of stacked disks with arcs and caps
+    \item \textbf{arcs} : segments properly embedded in each disk, with endpoints on the boundary
+    \item \textbf{caps} : segments from the arc in one disk to the arc in another disk
+    \item \textbf{simple closure}: the planar projection of the stacked tangle without any nested caps
+  \end{itemize}
+  % Then a simple closure of a stacked tangle without any nested caps is
+  % corresponding to an arc presentation.
+
+  \begin{figure}
+      \centering
+      \includegraphics[width=0.7\textwidth]{../Midterm_Poster/figure/stacked_tangle.png}
+      \caption{Stacked tangle and simple closure of handcuff graph $2_1$}
+  \end{figure}
+
   \end{block}
 \end{columns}
 
@@ -735,24 +741,20 @@
 
 \begin{columns}[t]
   \column{0.33\textwidth}
-  \begin{block}{Stacked Tangle Representation}
-
-  \begin{itemize}
-    \item \textbf{stacked tangle} : a configuration of stacked disks with arcs and caps
-    \item \textbf{arcs} : segments properly embedded in each disk, with endpoints on the boundary
-    \item \textbf{caps} : segments from the arc in one disk to the arc in another disk
-    \item \textbf{simple closure}: the planar projection of the stacked tangle without any nested caps
-  \end{itemize}
-  % Then a simple closure of a stacked tangle without any nested caps is
-  % corresponding to an arc presentation.
-
-  \begin{figure}
-      \centering
-      \includegraphics[width=0.7\textwidth]{../Midterm_Poster/figure/stacked_tangle.png}
-      \caption{Stacked tangle and simple closure of handcuff graph $2_1$}
-  \end{figure}
-
+  \begin{block}{Classifying Theta-Curves and Handcuff Graphs by Determinant}
+    % $\mathbf{Definition.}$ The \textbf{THC-Cromwell matrix} is the matrix that satisfies the following conditions.
+    % \begin{enumerate}
+    %   \item It is a $n\times(n+1)$ matrix with entries 0 and 1.
+    %   \item It has only two 1s in every row and column, except for two rows. These two rows have three 1s.
+    %   \item It represents a theta-curve or a handcuff graph.
+    % \end{enumerate}
+    $\mathbf{Definition.}$ Let any exception row(with three `1's) $i$ and its two outer 1s $j$, $k$.
+    The \textbf{H-deletion Matrix} of THC-Cromwell matrix is $(n-1)\times(n-1)$ matrix which deleted row $i$ and column $j$, $k$.\\
+    $\mathbf{Theorem.}$ The given THC-Cromwell matrix is theta-curve if and only if determinant of the H-deletion matrix is $\pm 1$.
+    The given THC-Cromwell matrix is handcuff graph if and only if determinant of the H-deletion matrix is $0$ or $\pm 2$.\\
   \end{block}
+
+
   \column{0.33\textwidth}
   \begin{block}{Bounds of Arc Index}
 
