--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -121,11 +121,11 @@
     %\textbf{Knot} is an embedding of a circle in 3-dimensional Euclidean space.
     %In \textbf{Knot Theory}, people classify each knot using their \textbf{Knot Invariant}. \\
     \begin{itemize}
-      \item \textbf{theta-curve} : a spatial knot on 3-sphere which has 2 vertices and 3 edges
+      \item \textbf{Theta-curve} : a spatial knot on 3-sphere which has 2 vertices and 3 edges
       %In the projection of the theta-curve, the section where theta-curve meets itself is named \textbf{crossing}.
       %If the one theta-curve and other theta-curve's continuous transform of the graph is same, these curves are \textbf{equivalent}.
-      \item \textbf{handcuff graph} : consists of two loops and an edge joining the loops
-      \item \textbf{generalized Reidemeister move} : used to transform a projection of theta-curve
+      \item \textbf{Handcuff graph} : consists of two loops and an edge joining the loops
+      \item \textbf{Generalized Reidemeister move} : used to transform a projection of theta-curve
     \end{itemize}
     \begin{figure}
       \includegraphics[width = 7.5cm]{figure/reidemeister.png}
@@ -139,9 +139,9 @@
     \begin{Diagrams}
       \caption{An algorithm with caption}\label{alg:cap}
       \begin{itemize} 
-        \item \textbf{grid diagram} : made of horizontal lines and vertical lines, and vertical lines are always on top of horizontal lines
+        \item \textbf{Grid diagram} : made of horizontal lines and vertical lines, and vertical lines are always on top of horizontal lines
         \item \textbf{Cromwell matrix} : matrix made of 0 and 1 - except 2 rows, each row and columns has exactly two 1s, and for 2 rows, there are exactly three 1s, if the 1s are connected by horizontal and vertical lines, it leads to the grid diagram
-        \item \textbf{arc presentation} : can be expressed by grid diagram and vice versa, number of half planes are $\alpha$ on minimal arc presentation $\Rightarrow$ the size of corresponding grid diagram is $(\alpha - 1) \times \alpha$
+        \item \textbf{Arc presentation} : can be expressed by grid diagram and vice versa, number of half planes are $\alpha$ on minimal arc presentation $\Rightarrow$ the size of corresponding grid diagram is $(\alpha - 1) \times \alpha$
       \end{itemize} 
     \end{Diagrams}
 
@@ -150,10 +150,10 @@
   \begin{block}{Stacked Tangle Representation}
 
   \begin{itemize}
-    \item \textbf{stacked tangle} : a configuration of stacked disks with arcs and caps
-    \item \textbf{arcs} : segments properly embedded in each disk, with endpoints on the boundary
+    \item \textbf{Stacked tangle} : a configuration of stacked disks with arcs and caps
+    \item \textbf{Arcs} : segments properly embedded in each disk, with endpoints on the boundary
     \item \textbf{caps} : segments from the arc in one disk to the arc in another disk
-    \item \textbf{simple closure}: the planar projection of the stacked tangle without any nested caps
+    \item \textbf{Simple closure}: the planar projection of the stacked tangle without any nested caps
   \end{itemize}
   % Then a simple closure of a stacked tangle without any nested caps is
   % corresponding to an arc presentation.
