--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -143,6 +143,16 @@
         \item \textbf{Cromwell matrix} : matrix made of 0 and 1 - except 2 rows, each row and columns has exactly two 1s, and for 2 rows, there are exactly three 1s, if the 1s are connected by horizontal and vertical lines, it leads to the grid diagram
         \item \textbf{Arc presentation} : can be expressed by grid diagram and vice versa, number of half planes are $\alpha$ on minimal arc presentation $\Rightarrow$ the size of corresponding grid diagram is $(\alpha - 1) \times \alpha$
       \end{itemize} 
+
+      \begin{figure}[h] % h: 여기에 배치 (가능한 경우)
+        \centering
+        \begin{tabular}{cc}
+          \includegraphics[width=0.4\textwidth]{figure/grid.png} &
+          \includegraphics[width=0.4\textwidth]{figure/openbook.png} \\
+        \end{tabular}
+        \caption{두 개의 이미지 예시} % 캡션 추가
+        \label{fig:two_images} % 라벨 설정 (인용 가능)
+      \end{figure}
     \end{Diagrams}
 
   \end{block}
@@ -152,7 +162,7 @@
   \begin{itemize}
     \item \textbf{Stacked tangle} : a configuration of stacked disks with arcs and caps
     \item \textbf{Arcs} : segments properly embedded in each disk, with endpoints on the boundary
-    \item \textbf{caps} : segments from the arc in one disk to the arc in another disk
+    \item \textbf{Caps} : segments from the arc in one disk to the arc in another disk
     \item \textbf{Simple closure}: the planar projection of the stacked tangle without any nested caps
   \end{itemize}
   % Then a simple closure of a stacked tangle without any nested caps is
