--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -144,14 +144,14 @@
         \item \textbf{Arc presentation} : can be expressed by grid diagram and vice versa, number of half planes are $\alpha$ on minimal arc presentation $\Rightarrow$ the size of corresponding grid diagram is $(\alpha - 1) \times \alpha$
       \end{itemize} 
 
-      \begin{figure}[h] % h: 여기에 배치 (가능한 경우)
+      \begin{figure}[h]
         \centering
         \begin{tabular}{cc}
-          \includegraphics[width=0.4\textwidth]{figure/grid.png} &
-          \includegraphics[width=0.4\textwidth]{figure/openbook.png} \\
+          \includegraphics[width=0.3\textwidth]{figure/grid.png} &
+          \includegraphics[width=0.3\textwidth]{figure/openbook.png} \\
         \end{tabular}
-        \caption{두 개의 이미지 예시} % 캡션 추가
-        \label{fig:two_images} % 라벨 설정 (인용 가능)
+        \caption{Grid diagram and Arc presentation of $\theta$-curve $3_1$}
+        \label{fig:two_images}
       \end{figure}
     \end{Diagrams}
 
